# dockyman

./: .devcontainer.json  .env  .gitignore  .gitmodules  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  build.sh  compose.dev.yaml  compose.yaml  dockyman  pyproject.toml  requirements.txt  run.sh  setup.py
.devcontainer/: .env  Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: CI-dockyman.yml  CI-install.yml  CI.yml  ci.yaml  ci.yml  docker.yml  test.yml
docker/: .devcontainer.json  .env  Dockerfile  build.env  build.sh  compose.yaml  dockyman.sh  dockyman.yaml  dockyman.yaml.j2  entrypoint.sh  install.sh  run.sh
docker/ansible/: ansible.cfg
docker/model/: .env  build.env
docker/vars/: manager.j2  worker.j2
dockyman/: __init__.py  _version.py  ansible.py  audio.py  cli.py  config.py  display.py  executor.py  hardware.py  logger.py  runner.py  utils.py
dockyman/commands/: build.py  clean.py  help.py  init.py  pull.py  push.py  run.py  setup.py  status.py  stop.py
dockyman/model/: DOCKYMAN.md  README.md  build.env  compose.yaml  dockyman.env  dockyman.yaml  nodes.yaml
example/: .env  dockyman.yaml  hosts.yaml  vars.yaml
example/ansible/: inventory.yaml
local/: Dockerfile  configure.sh  dockyman
pip/: README.md  requirements.txt  setup.py
script/: dockyman.sh
template/: .devcontainer.json  .gitignore  LICENSE  build.env  compose.base.yaml  compose.local.yaml  compose.yaml  dockyman.env  go
tests/: test_commands.py  test_config.py  test_executor.py  test_init.py  test_integration.py  test_log_dir.py  test_runner.py
(+77 files in other folders)
