[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dockyman"
dynamic = ["version"]
description = "Orchestrate Docker Compose services across multiple machines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "Jinja2>=3.1.6",
    "ansible>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
dockyman = "dockyman.cli:main"

[tool.setuptools.packages.find]
include = ["dockyman*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
